# gpu_sale_services

./: .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.MD  docker-compose.yaml  pyproject.toml
collector/: pyproject.toml
collector/migrations/: env.py
collector/migrations/versions/: cc807a77a535_database_creation.py
collector/src/: database.py  logger.py  main.py
collector/src/dao/: base.py  product.py
collector/src/models/: product.py  property.py  property_group.py
collector/src/schemas/: additional_product_data_schema.py  main_product_data_schema.py
collector/src/services/: sender.py  service_addition_storage.py  service_update_storage.py
collector/src/tasks/: celery_app.py  tasks.py
collector/src/utils/: http_client.py
fake_api_server/: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
fake_api_server/heplers/data/: country_link_data.py  gpu_cards_random_data.py  net_video_data.py
fake_api_server/scripts/: run.sh
fake_api_server/src/fake_api_server/: main.py
fake_api_server/src/fake_api_server/heplers/data/: country_link_data.py  gpu_cards_random_data.py  net_video_data.py
ms_collector/: .env  .env.template  .pre-commit-config.yaml  Dockerfile  README.MD  config.py  pyproject.toml
ms_collector/migrations/: env.py
ms_collector/migrations/versions/: 54925f52d646_database_creation.py  cb70adcf50b8_database_creation.py
ms_collector/scripts/: celery.sh
ms_collector/src/: database.py  logger.py
ms_collector/src/dao/: base.py  product.py  property.py  property_group.py
ms_collector/src/models/: product.py
ms_collector/src/ms_collector/: config.py  database.py  logger.py
ms_collector/src/ms_collector/dao/: base.py  product.py  property.py  property_group.py
ms_collector/src/ms_collector/models/: product.py  property.py  property_group.py
ms_collector/src/ms_collector/schemas/: additional_product_data_schema.py  construct_product_schema.py  main_product_data_schema.py
ms_collector/src/ms_collector/services/: construct_data.py  service_addition_storage.py  service_update_storage.py
ms_collector/src/ms_collector/tasks/: celery_app.py  tasks.py
ms_collector/src/ms_collector/utils/: http_client.py
ms_collector/src/schemas/: construct_product_schema.py
ms_collector/src/services/: construct_data.py  service_addition_storage.py  service_update_storage.py
ms_collector/src/tasks/: celery_app.py  fast_stream.py  tasks.py
ms_collector/src/tasks/celery_tasks/: celery_app.py  tasks.py
ms_collector/src/utils/: http_client.py
ms_sender/: .env  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  config.py  pyproject.toml
ms_sender/migrations/: env.py
ms_sender/migrations/versions/: 1fe10c1f9acf_database_creation.py  4e7f7b9413f2_database_creation.py
ms_sender/scripts/: celery.sh  run.sh
ms_sender/src/: database.py  exceptions.py  main.py
ms_sender/src/dao/: base.py  product.py  property.py  property_group.py
ms_sender/src/models/: product.py  property.py  property_group.py
ms_sender/src/ms_sender/: config.py  database.py  exceptions.py  logger.py  main.py
ms_sender/src/ms_sender/dao/: base.py  product.py  property.py  property_group.py
ms_sender/src/ms_sender/models/: product.py  property.py  property_group.py
ms_sender/src/ms_sender/rabbitmq/: consumer.py
ms_sender/src/ms_sender/routers/: __init__.py
ms_sender/src/ms_sender/routers/v1/: __init__.py  product.py  property.py  property_group.py
ms_sender/src/ms_sender/schemas/: brand_schema.py  product_schema.py  property_group_schema.py  property_schema.py
ms_sender/src/ms_sender/schemas/messages/: rmq_product_schema.py
ms_sender/src/ms_sender/services/: update_products.py
ms_sender/src/ms_sender/tasks/: celery_app.py  tasks.py
ms_sender/src/ms_sender/utils/: construct_data.py
ms_sender/src/rabbitmq/: consumer.py
ms_sender/src/routers/: __init__.py
ms_sender/src/routers/v1/: __init__.py  product.py  property.py  property_group.py
ms_sender/src/schemas/: brand_schema.py  product_schema.py  property_group_schema.py  property_schema.py
ms_sender/src/schemas/messages/: rmq_product_schema.py
ms_sender/src/services/: update_products.py
ms_sender/src/tasks/: celery_app.py  tasks.py
ms_sender/src/utils/: construct_data.py
