[tool.poetry]
name = "collector"
version = "0.1.0"
description = "Микросервис для сбора данных по видеокартам из сторонних сервисов."
authors = ["justyfay <sakura.ustinya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pika = "^1.3.2"
celery = "^5.4.0"
flower = "^2.0.1"
fastapi-utils = "^0.7.0"
typing-inspect = "^0.9.0"
retry = "^0.9.2"
asgiref = "^3.8.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
