[tool.poetry]
name = "collector"
version = "0.1.0"
description = "Микросервис для сбора данных по видеокартам из сторонних сервисов."
authors = ["justyfay <sakura.ustinya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
flower = "^2.0.1"
pre-commit = "^3.8.0"
celery = "^5.4.0"
faststream = "^0.5.23"
typer = "^0.12.5"
aio-pika = "^9.4.3"
taskiq-faststream = "^0.2.0"
pyproject-flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "F821", "E501"]

[tool.isort]
profile="black"
line_length=150
force_sort_within_sections = true
