[tool.poetry]
name = "ms_collector"
version = "0.1.0"
description = "Микросервис для сбора данных по видеокартам из сторонних сервисов."
authors = ["justyfay <sakura.ustinya@yandex.ru>"]
readme = "README.md"
packages = [{include = "ms_collector", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
greenlet = "^3.0.3"
flower = "^2.0.1"
pre-commit = "^3.8.0"
celery = "^5.4.0"
pyproject-flake8 = "^7.0.0"
ruff = "^0.8.1"
redis = "^5.2.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]